# ADHD-Cognitive-Trainer

./: .gitignore  CHANGELOG.md  README.md  app.cabal  cabal.project  package.yaml
app/: GameType.hs
app/Games/FlowFree/: Core.hs
lib-src/Games/: FlowFree.hs  GameType.hs
lib-src/Games/FlowFree/: Core.hs
lib-src/Lib/: LinAlg.hs
