cabal-version: 2.2
name: app
version: 0.1.0.0
synopsis: Sample miso app
category: Web

common options
  if arch(wasm32)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM

  if arch(javascript)
     ld-options:
       -sEXPORTED_RUNTIME_METHODS=HEAP8

executable app
  import:
    options
  main-is:
    Main.hs
  hs-source-dirs:
    app
  other-modules:
    Games.FlowFree
    Games.FlowFree.Core
  build-depends:
    base, miso >= 1.9, containers, vector, random
  default-language:
    Haskell2010
